# LineTool2

./: .gitignore  BUILD.md  CMakeLists.txt  README.md
resources/: winres.rc
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/core/: Database.cpp  Database.h  LoadabilityCalc.cpp  LoadabilityCalc.h  TransmissionLine.cpp  TransmissionLine.h
src/models/: ConductorTableModel.cpp  ConductorTableModel.h
src/tabs/: ConductorDatabaseTab.cpp  ConductorDatabaseTab.h  LineParametersTab.cpp  LineParametersTab.h  LoadabilityTab.cpp  LoadabilityTab.h
src/widgets/: LoadabilityChartWidget.cpp  LoadabilityChartWidget.h  TowerGeometryWidget.cpp  TowerGeometryWidget.h
tools/: create_sample_db.py
